ajustes nas páginas html

--- a/miniverse/html/conta.html
+++ b/miniverse/html/conta.html
@@ -62,82 +62,30 @@
         </nav>
     </header>
 
-    <div class="conteudo-criar">
-        <div class="divtitulo-criar">
-            <h1 class="titulo-criar">Criar conta</h1>
+    <div class="tudo-conta">
+        <div class="titulo-conta">
+            <h1>Sua conta</h1>
         </div>
-        <div>
-            <form class="row g-3">
-                <div class="col-12">
-                    <label for="inputAddress" class="form-label" style="color: white;">Nome</label>
-                    <input type="text" class="form-control" id="inputAddress">
-                </div>
-                <div class="col-12">
-                    <label for="inputAddress2" class="form-label" style="color: white;">E-mail</label>
-                    <input type="text" class="form-control" id="inputAddress2">
-                </div>
-                <div class="col-md-6">
-                    <label for="inputPassword4" class="form-label" style="color: white;">Senha</label>
-                    <input type="password" class="form-control" id="inputPassword4">
-                </div>
-                <div class="col-md-6">
-                    <label for="inputPassword4" class="form-label" style="color: white;">Confirme sua senha</label>
-                    <input type="password" class="form-control" id="inputPassword4">
-                </div>
-                <div class="col-12">
-                    <label for="inputAddress" class="form-label" style="color: white;">Endereço</label>
-                    <input type="text" class="form-control" id="inputAddress">
-                </div>
-                <div class="col-md-6">
-                    <label for="inputCity" class="form-label" style="color: white;">Cidade</label>
-                    <input type="text" class="form-control" id="inputCity">
-                </div>
-                <div class="col-md-4">
-                    <label for="inputState" class="form-label" style="color: white;">Estado</label>
-                    <select id="inputState" class="form-select">
-                        <option selected>...</option>
-                        <option>AC</option>
-                        <option>AL</option>
-                        <option>AP</option>
-                        <option>AM</option>
-                        <option>BA</option>
-                        <option>CE</option>
-                        <option>DF</option>
-                        <option>ES</option>
-                        <option>GO</option>
-                        <option>MA</option>
-                        <option>MT</option>
-                        <option>MS</option>
-                        <option>MG</option>
-                        <option>PA</option>
-                        <option>PB</option>
-                        <option>PR</option>
-                        <option>PE</option>
-                        <option>PI</option>
-                        <option>RJ</option>
-                        <option>RN</option>
-                        <option>RS</option>
-                        <option>RO</option>
-                        <option>RR</option>
-                        <option>SC</option>
-                        <option>SP</option>
-                        <option>SE</option>
-                        <option>TO</option>
-                    </select>
-                </div>
-                <div class="col-md-2">
-                    <label for="inputZip" class="form-label" style="color: white;">CEP</label>
-                    <input type="text" class="form-control" id="inputZip">
-                </div>
-                <a href="conta.html" style="text-decoration: none;"><div class="modal-footer" style="border-top: none; padding-bottom: 0%; padding-top: 0%;">
-                    <button type="button" class="btn btn-primary"
-                        style="margin-left: auto; margin-right: auto; background-color: #1cbe7e; color: black; border: solid black 2px; width: 20%; border-radius: 60px; font-size: 2.5vh; margin-top: 2%;">Entrar</button>
-                </div></a>
-            </form>
+        <div class="conteudo-conta">
+            <div class="nome">
+                <h1>Nome:</h1>
+                <h1>João Henrique Almeida</h1>
+            </div>
+            <div class="email">
+                <h1>E-mail:</h1>
+                <h1>joaohenrique@gmail.com</h1>
+            </div>
+            <div class="end">
+                <h1>Endereço:</h1>
+                <h1>Rua Boa Vista 123, Boa Vista</h1>
+            </div>
+            <div class="cidade">
+                <h1>Cidade:</h1>
+                <h1>São Caetano</h1>
+            </div>
+            
         </div>
     </div>
-
-
 
     <footer class="bd-footer py-4 py-md-5" style="margin-top: 200px;">
         <div class="container py-4 py-md-5 px-4 px-md-3">
