--- a/miniverse/html/evento_sazonal.html
+++ b/miniverse/html/evento_sazonal.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miniverse | Produtos</title>
+    <title>Miniverse | Halloween</title> <!--O nome muda de acordo com o evento-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/produtos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <!--Header-->
     <header style="font-size: 20px; background-color: #092e2b;">
         <div class="line"></div>
         <nav class="navbar navbar-expand-lg">
@@ -61,115 +60,54 @@
         </nav>
     </header>
 
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="../images/evento_sazonal/img_tema_sazonal.png" class="img-fluid">
+            </div>
+        </div>
+    </div>
 
-    <!--Produtos da Marvel-->
-    <section id="marvel" class="marca-section">
-        <div class="container">
-            <h1>Marvel</h1>
-            <div class="row">
-                <div class="col">
-
+    <div class="container" style="margin-top: 50px;">
+        <h1 class="titulo-halloween">HALLOWEEN</h1>
+        <div class="row text-center" style="margin-top: 20px;">
+            <div class="col-12 col-md-4">
+                <div class="card card_halloween border-0">
+                    <img src="../images/evento_sazonal/jason_halloween.png" class="card-img-top" alt="Jason Voorhees" style="height: 400px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Jason Voorhees</h5>
+                        <p class="card-text">R$ 449,90</p>
+                        <a href="./produtos_halloween/jason.html" class="btn btn-outline-success button_halloween">Ver miniatura</a>
+                    </div>
                 </div>
-                <div class="col">
-
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="card card_halloween border-0 h-100">
+                    <img src="../images/evento_sazonal/pennywise_halloween.png" class="card-img-top" alt="Pennywise" style="height: 400px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Pennywise</h5>
+                        <p class="card-text">R$ 449,90</p>
+                        <a href="./produtos_halloween/pennywise.html" class="btn btn-outline-success button_halloween">Ver miniatura</a>
+                    </div>
                 </div>
-                <div class="col">
-
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="card card_halloween border-0 h-100">
+                    <img src="../images/evento_sazonal/ghostface_halloween.png" class="card-img-top" alt="Ghostface" style="height: 400px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Ghostface</h5>
+                        <p class="card-text">R$ 449,90</p>
+                        <a href="./produtos_halloween/ghostface.html" class="btn btn-outline-success button_halloween">Ver miniatura</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!--Produtos da DC-->
-    <section id="dc" class="marca-section">
-        <div class="container">
-            <h1>DC</h1>
-            <div class="row">
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--Produtos do Dragon Ball-->
-    <section id="dragonball" class="marca-section">
-        <div class="container">
-            <h1>Dragon Ball</h1>
-            <div class="row">
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--Produtos de The Last of Us-->
-    <section id="tlou" class="marca-section">
-        <div class="container">
-            <h1>The Last of Us</h1>
-            <div class="row">
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--Produtos de Star Wars-->
-    <section id="starwars" class="marca-section">
-        <div class="container">
-            <h1>Star Wars</h1>
-            <div class="row">
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--Produtos de Seres Mitológicos-->
-    <section id="seresmito" class="marca-section">
-        <div class="container">
-            <h1>Seres Mitológicos</h1>
-            <div class="row">
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-                <div class="col">
-
-                </div>
-            </div>
-        </div>
-    </section>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="../js/index.js"></script>
 </body>
 
 </html>
