--- a/miniverse/html/planos.html
+++ b/miniverse/html/planos.html
@@ -7,7 +7,7 @@
     <title>Miniverse | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/contas.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
 </head>
 
@@ -62,81 +62,82 @@
         </nav>
     </header>
 
-    <div class="conteudo-criar">
-        <div class="divtitulo-criar">
-            <h1 class="titulo-criar">Criar conta</h1>
-        </div>
-        <div>
-            <form class="row g-3">
-                <div class="col-12">
-                    <label for="inputAddress" class="form-label" style="color: white;">Nome</label>
-                    <input type="text" class="form-control" id="inputAddress">
+    <!-- Modal login -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+        style="margin-top: 10%;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="border-bottom: none; margin-top: 2%;">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                        style="margin-left: 0; box-shadow: none;"></button>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel"
+                        style="position: absolute; left: 50%; transform: translateX(-50%); font-size: 4vh !important; margin-top: 10%;">
+                        Login</h1>
                 </div>
-                <div class="col-12">
-                    <label for="inputAddress2" class="form-label" style="color: white;">E-mail</label>
-                    <input type="text" class="form-control" id="inputAddress2">
+                <div class="modal-body" style="margin-top: 2%;">
+                    <form>
+                        <div class="mb-3">
+                            <label for="recipient-name" class="col-form-label">E-mail</label>
+                            <input type="text" class="form-control test" id="recipient-name" style="box-shadow: none;">
+                        </div>
+                        <div class="mb-3">
+                            <label for="message-text" class="col-form-label">Senha</label>
+                            <input type="text" class="form-control" id="recipient-name" style="box-shadow: none;">
+                        </div>
+                    </form>
                 </div>
-                <div class="col-md-6">
-                    <label for="inputPassword4" class="form-label" style="color: white;">Senha</label>
-                    <input type="password" class="form-control" id="inputPassword4">
-                </div>
-                <div class="col-md-6">
-                    <label for="inputPassword4" class="form-label" style="color: white;">Confirme sua senha</label>
-                    <input type="password" class="form-control" id="inputPassword4">
-                </div>
-                <div class="col-12">
-                    <label for="inputAddress" class="form-label" style="color: white;">Endereço</label>
-                    <input type="text" class="form-control" id="inputAddress">
-                </div>
-                <div class="col-md-6">
-                    <label for="inputCity" class="form-label" style="color: white;">Cidade</label>
-                    <input type="text" class="form-control" id="inputCity">
-                </div>
-                <div class="col-md-4">
-                    <label for="inputState" class="form-label" style="color: white;">Estado</label>
-                    <select id="inputState" class="form-select">
-                        <option selected>...</option>
-                        <option>AC</option>
-                        <option>AL</option>
-                        <option>AP</option>
-                        <option>AM</option>
-                        <option>BA</option>
-                        <option>CE</option>
-                        <option>DF</option>
-                        <option>ES</option>
-                        <option>GO</option>
-                        <option>MA</option>
-                        <option>MT</option>
-                        <option>MS</option>
-                        <option>MG</option>
-                        <option>PA</option>
-                        <option>PB</option>
-                        <option>PR</option>
-                        <option>PE</option>
-                        <option>PI</option>
-                        <option>RJ</option>
-                        <option>RN</option>
-                        <option>RS</option>
-                        <option>RO</option>
-                        <option>RR</option>
-                        <option>SC</option>
-                        <option>SP</option>
-                        <option>SE</option>
-                        <option>TO</option>
-                    </select>
-                </div>
-                <div class="col-md-2">
-                    <label for="inputZip" class="form-label" style="color: white;">CEP</label>
-                    <input type="text" class="form-control" id="inputZip">
-                </div>
-                <a href="conta.html" style="text-decoration: none;"><div class="modal-footer" style="border-top: none; padding-bottom: 0%; padding-top: 0%;">
+                <div class="modal-footer" style="border-top: none; padding-bottom: 0%; padding-top: 0%;">
                     <button type="button" class="btn btn-primary"
-                        style="margin-left: auto; margin-right: auto; background-color: #1cbe7e; color: black; border: solid black 2px; width: 20%; border-radius: 60px; font-size: 2.5vh; margin-top: 2%;">Entrar</button>
-                </div></a>
-            </form>
+                        style="margin-left: auto; margin-right: auto; background-color: #1cbe7e; color: black; border: solid black 2px; width: 40%; border-radius: 60px; font-size: 2.5vh;">Entrar</button>
+                </div>
+                <div style="margin-left: auto; margin-right: auto; margin-top: 1%; margin-bottom: 3%;">
+                    <p>Não tem uma conta? <a href="criarconta.html"
+                            style="text-decoration: none; color: #1cbe7e;"><b>Crie uma</b></a></p>
+                </div><b>
+            </div>
         </div>
     </div>
 
+
+    <div class="row justify-content-center g-4 slider_cards text-center">
+
+        <div class="col-10 col-sm-6 col-md-4 col-lg-3">
+            <div class="card card_lancamento border-0 h-100">
+                <img src="../images/produtos_tlou/Abby.png" class="card-img-top" alt="Yoda">
+                <div class="card-body">
+                    <h5 class="card-title">Abby</h5>
+                    <p class="card-text">R$ 419,90</p>
+                    <p class="text_desconto card-text">16% de desconto</p>
+                    <a href="./tlou/abby.html" class="btn btn-outline-success button">Ver miniatura</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-10 col-sm-6 col-md-4 col-lg-3">
+            <div class="card card_lancamento border-0 h-100">
+                <img src="../images/produtos_dc/Batman.png" class="card-img-top" alt="Yoda">
+                <div class="card-body">
+                    <h5 class="card-title">Batman</h5>
+                    <p class="card-text">R$ 489,90</p>
+                    <p class="text_desconto card-text">14% de desconto</p>
+                    <a href="./dc/batman.html" class="btn btn-outline-success button">Ver miniatura</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-10 col-sm-6 col-md-4 col-lg-3">
+            <div class="card card_lancamento border-0 h-100">
+                <img src="../images/produtos_seresMito/Medusa.png" class="card-img-top" alt="Yoda">
+                <div class="card-body">
+                    <h5 class="card-title">Medusa</h5>
+                    <p class="card-text">R$ 459,90</p>
+                    <p class="text_desconto card-text">15% de desconto</p>
+                    <a href="./seresMito/medusa.html" class="btn btn-outline-success button">Ver
+                        miniatura</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <footer class="bd-footer py-4 py-md-5" style="margin-top: 200px;">
@@ -208,7 +209,6 @@
                 </div>
             </div>
         </div>
-        <button>slpa</button>
     </footer>
 
 
