alterando páginas HTML

--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -150,10 +150,11 @@
             <!-- Evento 1 -->
             <div class="col divs_funcoes_site">
                 <a href="./evento_sazonal.html">
-                    <div class="div_diferencial_site">
-                        <img src="../images/evento_sazonal/pennywise_halloween.png" alt="Evento Sazonal"
-                            class="evento-img">
-                        <h2>Halloween</h2>
+                    <div class="div_diferencial_site_halloween">
+                        <img src="../images/evento_sazonal/img_fundo_EveSaz.png" alt="Evento Sazonal"
+                            class="evento-img_halloween">
+                        <div class="overlay_halloween"></div>
+                        <div class="texto-sobre_halloween">Coleção Sazonal</div>
                     </div>
                 </a>
             </div>
@@ -162,18 +163,22 @@
             <div class="col divs_funcoes_site">
                 <a href="planos.html">
                     <div class="div_diferencial_site">
-                        <img src="img" alt="Planos de assinatura" class="evento-img">
-                        <h2>Planos</h2>
+                        <img src="..." alt="..." class="evento-img">
+                        <div class="overlay"></div>
+                        <div class="texto-sobre">Planos de assinatura</div>
                     </div>
                 </a>
             </div>
 
             <!-- Evento 3 -->
             <div class="col divs_funcoes_site">
-                <div class="div_diferencial_site">
-                    <img src="img" alt="Personalização de Miniatura" class="evento-img">
-                    <h2>Personalizar miniatura</h2>
-                </div>
+                <a href="">
+                    <div class="div_diferencial_site">
+                        <img src="..." alt="..." class="evento-img">
+                        <div class="overlay"></div>
+                        <div class="texto-sobre">Personalize sua miniatura</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
