--- a/miniverse/html/marvel/homemFerro.html
+++ b/miniverse/html/marvel/homemFerro.html
@@ -23,49 +23,48 @@
 <body>
 
   <header style="font-size: 20px; background-color: #092e2b;" id="inicio">
-        <div class="line"></div>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a href="../index.html"><img src="../../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
-                <p class="miniverse">MINIVERSE</p>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div style="margin-left: auto; margin-right: auto;  ">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                            <li class="nav-item">
-                                <a class="nav-link a_li_header" aria-current="page" href="../index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link a_li_header" href="../produtos.html">Produtos</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle a_li_header" href="#" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Marcas
-                                </a>
-                                <ul class="dropdown-menu dropmenu-marcas">
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#marvel" >Marvel</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#dragonball" >Dragon Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#tlou">The Last of Us</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#starwars" >Star Wars</a> </li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#seresmito">Seres Mitológicos</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
-                            style="width: 30px; margin-right: 20px;  filter: invert();"></a>
-                    <a href="conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
-                            src="../../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div class="line"></div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a href="../index.html"><img src="../../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
+        <p class="miniverse">MINIVERSE</p>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div style="margin-left: auto; margin-right: auto;  ">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+              <li class="nav-item">
+                <a class="nav-link a_li_header" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link a_li_header" href="../produtos.html">Produtos</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle a_li_header" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Marcas
+                </a>
+                <ul class="dropdown-menu dropmenu-marcas">
+                  <li><a class="dropdown-item a_li_header" href="../produtos.html#marvel">Marvel</a></li>
+                  <li><a class="dropdown-item a_li_header" href="../produtos.html#dc">DC</a></li>
+                  <li><a class="dropdown-item a_li_header" href="../produtos.html#dragonball">Dragon Ball</a></li>
+                  <li><a class="dropdown-item a_li_header" href="../produtos.html#tlou">The Last of Us</a></li>
+                  <li><a class="dropdown-item a_li_header" href="../produtos.html#starwars">Star Wars</a> </li>
+                  <li><a class="dropdown-item a_li_header" href="../produtos.html#seresmito">Seres Mitológicos</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <a href="carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
+              style="width: 30px; margin-right: 20px;  filter: invert();"></a>
+          <a href="conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
+              src="../../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
+        </div>
+      </div>
+    </nav>
+  </header>
 
   <div class="quadrado">
     <div class="rota">Início > Marca > Marvel > Homem de Ferro</div>
@@ -76,11 +75,17 @@
       </div>
       <div class="informacoes">
         <h1>Homem de Ferro</h1>
-        <p>Código: MRV-001-IF</p>
+        <p>Código: 1002</p>
 
-        <div class="pix">R$ 1.839,95 no Pix</div>
-        <div class="preco-antigo">De R$ 1.999,95</div>
-        <div class="juros">ou 12x de R$ 166,66 sem juros</div>
+        <span class="badge badge-colecionavel">Edição Limitada</span>
+        <span class="badge badge-premium">Marvel</span>
+        <span class="badge badge-hero">Heroi</span>
+        <span class="badge badge-detalhes">Detalhes Realistas</span>
+        <span class="badge badge-pintura">Pintura a mão</span>
+
+        <div class="pix">R$ 599,90 no Pix</div>
+        <div class="preco-antigo">De R$ 599,90</div>
+        <div class="juros">ou 6x de R$ 120,00 sem juros</div>
 
         <div class="secao-compra">
           <div class="Quantidade">
@@ -91,7 +96,6 @@
               <option value="3">3</option>
             </select>
           </div>
-          <br>
           <button class="botao-comprar">Comprar</button>
         </div>
       </div>
@@ -153,97 +157,96 @@
 
       <div class="acompanha">
         <p>
-          <strong>📦 O que acompanha:</strong> Miniatura Homem de Ferro pintada à mão, 
-          base hexagonal com logo Stark Industries, certificado de autenticidade numerado, manual de cuidados 
+          <strong>📦 O que acompanha:</strong> Miniatura Homem de Ferro pintada à mão,
+          base hexagonal com logo Stark Industries, certificado de autenticidade numerado, manual de cuidados
           e embalagem colecionável premium.
         </p>
       </div>
     </div>
   </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 
-    <footer class="bd-footer py-4 py-md-5" style="margin-top: 200px;">
-      <div class="container py-4 py-md-5 px-4 px-md-3">
-        <div class="row">
-          <div class="col-lg-3 mb-3"> <a class="d-inline-flex align-items-center mb-2 text-decoration-none"
-              href="../../index.html" aria-label="Bootstrap"> <img src="../../images/logo_miniverse_minimalista.png"
-                height="80" width="80">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
-                fill="currentColor"></path>
-              </svg> <span class="fs-5 miniF">Miniverse</span>
-            </a>
-            <ul class="list-unstyled small">
-              <li class="mb-2" style="font-size: 20px;">
-                <i>Seu universo em miniatura.</i>
-              </li>
-              <li class="mb-2"></li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-1 mb-2">
-            <h5 class="marvel">Marvel</h5><br>
-            <ul class="list-unstyled">
-              <li class="mb-2"><a href="homemAranha.html">Homem-Aranha</a></li>
-              <li class="mb-2"><a href="homemFerro.html">Homem de Ferro</a></li>
-              <li class="mb-2"><a href="capitaoAmerica.html">Capitão América</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-1 mb-2">
-            <h5 class="dc">DC</h5><br>
-            <ul class="list-unstyled">
-              <li class="mb-2"><a href="../dc/batman.html">Batman</a></li>
-              <li class="mb-2"><a href="../dc/superman.html">Superman</a></li>
-              <li class="mb-2"><a href="../dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-1 mb-2">
-            <h5 class="db">Dragon Ball</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2"> <a href="../dragonBall/goku.html" rel="noopener">Goku</a> </li>
-              <li class="mb-2"> <a href="../dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
-              <li class="mb-2"><a href="../dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-1 mb-2">
-            <h5 class="tlou">The Last of Us</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2"> <a href="../tlou/joel.html" rel="noopener">Joel</a> </li>
-              <li class="mb-2"> <a href="../tlou/ellie.html" rel="noopener">Ellie</a> </li>
-              <li class="mb-2"> <a href="../tlou/abby.html" rel="noopener">Abby</a> </li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-1 mb-2">
-            <h5 class="star">Star Wars</h5><br>
-            <ul class="list-unstyled">
-              <li class="mb-2"> <a href="../starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
-              <li class="mb-2"> <a href="../starWars/yoda.html" rel="noopener">Yoda</a> </li>
-              <li class="mb-2"> <a href="../starWars/leia.html" rel="noopener">Leia</a> </li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-1 mb-2">
-            <h5 class="mito">Seres Mitológicos</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2 color:black"> <a href="../seresMito/zeus.html" rel="noopener">Zeus</a> </li>
-              <li class="mb-2"> <a href="../seresMito/minotauro.html" rel="noopener">Minotauro</a> </li>
-              <li class="mb-2"> <a href="../seresMito/medusa.html" rel="noopener">Medusa</a>
-              </li>
-            </ul>
-          </div>
+  <footer class="bd-footer py-4 py-md-5" style="margin-top: 200px;">
+    <div class="container py-4 py-md-5 px-4 px-md-3">
+      <div class="row">
+        <div class="col-lg-3 mb-3"> <a class="d-inline-flex align-items-center mb-2 text-decoration-none"
+            href="../../index.html" aria-label="Bootstrap"> <img src="../../images/logo_miniverse_minimalista.png"
+              height="80" width="80">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
+              fill="currentColor"></path>
+            </svg> <span class="fs-5 miniF">Miniverse</span>
+          </a>
+          <ul class="list-unstyled small">
+            <li class="mb-2" style="font-size: 20px;">
+              <i>Seu universo em miniatura.</i>
+            </li>
+            <li class="mb-2"></li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-1 mb-2">
+          <h5 class="marvel">Marvel</h5><br>
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="homemAranha.html">Homem-Aranha</a></li>
+            <li class="mb-2"><a href="homemFerro.html">Homem de Ferro</a></li>
+            <li class="mb-2"><a href="capitaoAmerica.html">Capitão América</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-1 mb-2">
+          <h5 class="dc">DC</h5><br>
+          <ul class="list-unstyled">
+            <li class="mb-2"><a href="../dc/batman.html">Batman</a></li>
+            <li class="mb-2"><a href="../dc/superman.html">Superman</a></li>
+            <li class="mb-2"><a href="../dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-1 mb-2">
+          <h5 class="db">Dragon Ball</h5>
+          <ul class="list-unstyled">
+            <li class="mb-2"> <a href="../dragonBall/goku.html" rel="noopener">Goku</a> </li>
+            <li class="mb-2"> <a href="../dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
+            <li class="mb-2"><a href="../dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-1 mb-2">
+          <h5 class="tlou">The Last of Us</h5>
+          <ul class="list-unstyled">
+            <li class="mb-2"> <a href="../tlou/joel.html" rel="noopener">Joel</a> </li>
+            <li class="mb-2"> <a href="../tlou/ellie.html" rel="noopener">Ellie</a> </li>
+            <li class="mb-2"> <a href="../tlou/abby.html" rel="noopener">Abby</a> </li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-1 mb-2">
+          <h5 class="star">Star Wars</h5><br>
+          <ul class="list-unstyled">
+            <li class="mb-2"> <a href="../starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
+            <li class="mb-2"> <a href="../starWars/yoda.html" rel="noopener">Yoda</a> </li>
+            <li class="mb-2"> <a href="../starWars/leia.html" rel="noopener">Leia</a> </li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-1 mb-2">
+          <h5 class="mito">Seres Mitológicos</h5>
+          <ul class="list-unstyled">
+            <li class="mb-2 color:black"> <a href="../seresMito/zeus.html" rel="noopener">Zeus</a> </li>
+            <li class="mb-2"> <a href="../seresMito/minotauro.html" rel="noopener">Minotauro</a> </li>
+            <li class="mb-2"> <a href="../seresMito/medusa.html" rel="noopener">Medusa</a>
+            </li>
+          </ul>
         </div>
       </div>
-      <button>slpa</button>
-    </footer>
+    </div>
+  </footer>
 
-    <script>
-      $('.select_quantidade').select2({
-        minimumResultsForSearch: Infinity, // remove a barra de pesquisa
-        placeholder: "Selecione a quantidade",
-        allowClear: false
-      });
-    </script>
+  <script>
+    $('.select_quantidade').select2({
+      minimumResultsForSearch: Infinity, // remove a barra de pesquisa
+      placeholder: "Selecione a quantidade",
+      allowClear: false
+    });
+  </script>
 
 </body>
 
