--- a/miniverse/html/produtos.html
+++ b/miniverse/html/produtos.html
@@ -38,15 +38,15 @@
                                     Marcas
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas">
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#marvel">Marvel</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dragonball">Dragon
+                                    <li><a class="dropdown-item a_li_header" href="#marvel">Marvel</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="#dc">DC</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="#dragonball">Dragon
                                             Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#tlou">The Last of
+                                    <li><a class="dropdown-item a_li_header" href="#tlou">The Last of
                                             Us</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#starwars">Star Wars</a>
+                                    <li><a class="dropdown-item a_li_header" href="#starwars">Star Wars</a>
                                     </li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#seresmito">Seres
+                                    <li><a class="dropdown-item a_li_header" href="#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
                             </li>
