--- a/miniverse/html/evento_sazonal.html
+++ b/miniverse/html/evento_sazonal.html
@@ -8,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
 </head>
 
 <body>
-    <header style="font-size: 20px; background-color: #092e2b;">
+    <header style="font-size: 20px; background-color: #092e2b;" id="inicio">
         <div class="line"></div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -72,37 +73,121 @@
         <h1 class="titulo-halloween">HALLOWEEN</h1>
         <div class="row text-center" style="margin-top: 20px;">
             <div class="col-12 col-md-4">
-                <div class="card card_halloween border-0">
-                    <img src="../images/evento_sazonal/jason_halloween.png" class="card-img-top" alt="Jason Voorhees" style="height: 400px;">
+                <div class="card card_halloween border-0 h-100">
+                    <img src="../images/evento_sazonal/jason_halloween.png" class="card-img-top" alt="Jason Voorhees"
+                        style="height: 400px;">
                     <div class="card-body">
                         <h5 class="card-title">Jason Voorhees</h5>
                         <p class="card-text">R$ 449,90</p>
-                        <a href="./produtos_halloween/jason.html" class="btn btn-outline-success button_halloween">Ver miniatura</a>
+                        <a href="./produtos_halloween/jason.html" class="btn button_halloween">Ver
+                            miniatura</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-4">
                 <div class="card card_halloween border-0 h-100">
-                    <img src="../images/evento_sazonal/pennywise_halloween.png" class="card-img-top" alt="Pennywise" style="height: 400px;">
+                    <img src="../images/evento_sazonal/pennywise_halloween.png" class="card-img-top" alt="Pennywise"
+                        style="height: 400px;">
                     <div class="card-body">
                         <h5 class="card-title">Pennywise</h5>
                         <p class="card-text">R$ 449,90</p>
-                        <a href="./produtos_halloween/pennywise.html" class="btn btn-outline-success button_halloween">Ver miniatura</a>
+                        <a href="./produtos_halloween/pennywise.html"
+                            class="btn button_halloween">Ver miniatura</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-4">
                 <div class="card card_halloween border-0 h-100">
-                    <img src="../images/evento_sazonal/ghostface_halloween.png" class="card-img-top" alt="Ghostface" style="height: 400px;">
+                    <img src="../images/evento_sazonal/ghostface_halloween.png" class="card-img-top" alt="Ghostface"
+                        style="height: 400px;">
                     <div class="card-body">
                         <h5 class="card-title">Ghostface</h5>
                         <p class="card-text">R$ 449,90</p>
-                        <a href="./produtos_halloween/ghostface.html" class="btn btn-outline-success button_halloween">Ver miniatura</a>
+                        <a href="./produtos_halloween/ghostface.html"
+                            class="btn button_halloween">Ver miniatura</a>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
     </div>
+
+
+
+    <footer class="bd-footer py-4 py-md-5" style="margin-top: 200px;">
+        <div class="container py-4 py-md-5 px-4 px-md-3">
+            <div class="row">
+                <div class="col-lg-3 mb-3"> <a class="d-inline-flex align-items-center mb-2 text-decoration-none a_footer_halloween"
+                        href="index.html" aria-label="Bootstrap"> <img src="../images/logo_miniverse_minimalista.png"
+                            height="80" width="80" class="img_footer_halloween">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
+                            fill="currentColor"></path>
+                        </svg> <span class="fs-5 miniF">Miniverse</span>
+                    </a>
+                    <ul class="list-unstyled small">
+                        <li class="mb-2" style="font-size: 20px;">
+                            <i>Seu universo em miniatura.</i>
+                        </li>
+                        <li class="mb-2"></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="marvel" style="color: orange;">Marvel</h5><br>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a class="a_footer_halloween" href="./marvel/homemAranha.html">Homem-Aranha</a></li>
+                        <li class="mb-2"><a class="a_footer_halloween" href="./marvel/homemFerro.html">Homem de Ferro</a></li>
+                        <li class="mb-2"><a class="a_footer_halloween" href="./marvel/capitaoAmerica.html">Capitão América</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="dc" style="color: orange;">DC</h5><br>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a class="a_footer_halloween" href="./dc/batman.html">Batman</a></li>
+                        <li class="mb-2"><a class="a_footer_halloween" href="./dc/superman.html">Superman</a></li>
+                        <li class="mb-2"><a class="a_footer_halloween" href="./dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="db" style="color: orange;">Dragon Ball</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./dragonBall/goku.html" rel="noopener">Goku</a> </li>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
+                        <li class="mb-2"><a class="a_footer_halloween" href="./dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="tlou" style="color: orange;">The Last of Us</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./tlou/joel.html" rel="noopener">Joel</a> </li>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./tlou/ellie.html" rel="noopener">Ellie</a> </li>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./tlou/abby.html" rel="noopener">Abby</a> </li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="star" style="color: orange;">Star Wars</h5><br>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./starWars/yoda.html" rel="noopener">Yoda</a> </li>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./starWars/leia.html" rel="noopener">Leia</a> </li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="mito" style="color: orange;">Seres Mitológicos</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./seresMito/zeus.html" rel="noopener">Zeus</a> </li>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./seresMito/minotauro.html" rel="noopener">Minotauro</a> </li>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="./seresMito/medusa.html" rel="noopener">Medusa</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
