--- a/miniverse/html/conta.html
+++ b/miniverse/html/conta.html
@@ -83,7 +83,7 @@
                 <h1>Cidade:</h1>
                 <h1>São Caetano</h1>
             </div>
-            
+
         </div>
     </div>
 
@@ -156,13 +156,23 @@
                 </div>
             </div>
         </div>
-        <button>slpa</button>
     </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+    <script>
+        const usuario = JSON.parse(localStorage.getItem("usuarioLogado"));
+        if (usuario) {
+            document.querySelector(".nome h1:nth-child(2)").textContent = usuario.nome;
+            document.querySelector(".email h1:nth-child(2)").textContent = usuario.email;
+            document.querySelector(".endereco h1:nth-child(2)").textContent = usuario.endereco;
+            document.querySelector(".cidade h1:nth-child(2)").textContent = usuario.cidade;
+        } else {
+            window.location.href = "index.html";
+        }
+    </script>
+
+
+
 </body>
 
 </html>
