--- a/miniverse/html/criarconta.html
+++ b/miniverse/html/criarconta.html
@@ -69,23 +69,23 @@
         <div>
             <form class="row g-3">
                 <div class="col-12">
-                    <label for="inputAddress" class="form-label" style="color: white;">Nome</label>
-                    <input type="text" class="form-control" id="inputAddress">
+                    <label for="inputNome" class="form-label" style="color: white;">Nome</label>
+                    <input type="text" class="form-control" id="inputNome">
                 </div>
                 <div class="col-12">
-                    <label for="inputAddress2" class="form-label" style="color: white;">E-mail</label>
-                    <input type="text" class="form-control" id="inputAddress2">
+                    <label for="inputEmail" class="form-label" style="color: white;">E-mail</label>
+                    <input type="text" class="form-control" id="inputEmail">
                 </div>
                 <div class="col-md-6">
-                    <label for="inputPassword4" class="form-label" style="color: white;">Senha</label>
-                    <input type="password" class="form-control" id="inputPassword4">
+                    <label for="inputPassword" class="form-label" style="color: white;">Senha</label>
+                    <input type="password" class="form-control" id="inputPassword">
                 </div>
                 <div class="col-md-6">
-                    <label for="inputPassword4" class="form-label" style="color: white;">Confirme sua senha</label>
-                    <input type="password" class="form-control" id="inputPassword4">
+                    <label for="inputPassword" class="form-label" style="color: white;">Confirme sua senha</label>
+                    <input type="password" class="form-control" id="inputPassword">
                 </div>
                 <div class="col-12">
-                    <label for="inputAddress" class="form-label" style="color: white;">Endereço</label>
+                    <label for="ss" class="form-label" style="color: white;">Endereço</label>
                     <input type="text" class="form-control" id="inputAddress">
                 </div>
                 <div class="col-md-6">
@@ -129,10 +129,12 @@
                     <label for="inputZip" class="form-label" style="color: white;">CEP</label>
                     <input type="text" class="form-control" id="inputZip">
                 </div>
-                <a href="conta.html" style="text-decoration: none;"><div class="modal-footer" style="border-top: none; padding-bottom: 0%; padding-top: 0%;">
-                    <button type="button" class="btn btn-primary"
-                        style="margin-left: auto; margin-right: auto; background-color: #1cbe7e; color: black; border: solid black 2px; width: 20%; border-radius: 60px; font-size: 2.5vh; margin-top: 2%;">Entrar</button>
-                </div></a>
+                <a href="conta.html" style="text-decoration: none;">
+                    <div class="modal-footer" style="border-top: none; padding-bottom: 0%; padding-top: 0%;">
+                        <button type="button" class="btn btn-primary"
+                            style="margin-left: auto; margin-right: auto; background-color: #1cbe7e; color: black; border: solid black 2px; width: 20%; border-radius: 60px; font-size: 2.5vh; margin-top: 2%;">Entrar</button>
+                    </div>
+                </a>
             </form>
         </div>
     </div>
@@ -215,6 +217,37 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+    <script>
+        document.querySelector(".btn.btn-primary").addEventListener("click", function (err) {
+            err.preventDefault(); // evita que recarregue a página
+
+            // Coleta os dados
+            const nome = document.getElementById("inputNome").value;
+            const email = document.getElementById("inputEmail").value;
+            const senha = document.getElementById("inputPassword").value;
+            const endereco = document.getElementById("inputAddress").value;
+            const cidade = document.getElementById("inputCity").value;
+
+            // Pega usuários já cadastrados ou cria um novo array
+            const usuarios = JSON.parse(localStorage.getItem("usuarios")) || [];
+
+            // Verifica se o email já está cadastrado
+            const jaExiste = usuarios.some(user => user.email === email);
+            if (jaExiste) {
+                alert("E-mail já cadastrado!");
+                return;
+            }
+
+            // Salva novo usuário
+            usuarios.push({ nome, email, senha, endereco, cidade });
+            localStorage.setItem("usuarios", JSON.stringify(usuarios));
+
+            alert("Conta criada com sucesso!");
+            window.location.href = "index.html"; // redireciona
+        });
+    </script>
+
 </body>
 
 </html>
