--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -472,6 +472,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+    <!--Script para o login-->
+    <script>
+        document.querySelector("#exampleModal .btn-primary").addEventListener("click", function (err) {
+            err.preventDefault();
+
+            const email = document.querySelector("#exampleModal input[type='text']").value;
+            const senha = document.querySelectorAll("#exampleModal input[type='text']")[1].value;
+
+            const usuarios = JSON.parse(localStorage.getItem("usuarios")) || [];
+
+            const usuario = usuarios.find(user => user.email === email && user.senha === senha);
+
+            if (usuario) {
+                localStorage.setItem("usuarioLogado", JSON.stringify(usuario));
+                alert("Login realizado com sucesso!");
+                window.location.href = "conta.html"; // redireciona pra página da conta
+            } else {
+                alert("E-mail ou senha incorretos!");
+            }
+        });
+    </script>
+
 </body>
 
 </html>
